@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T01:53:52Z",
-  "count_outdated" : 2168,
-  "uniques_outdated" : 440,
+  "timestamp" : "2022-06-22T16:27:10Z",
+  "count_outdated" : 2169,
+  "uniques_outdated" : 441,
   "count" : 2211,
   "uniques" : 466,
   "clones" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 3,
